--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root{
+  --main-color: #ec407a
+}
 body {
   margin: 0;
   padding: 0;
@@ -19,4 +22,22 @@ input.form-control {
 }
 input[type=file] {
   width: 100%;
+}
+
+form{
+  
+  padding: 10%;
+  margin-top: 5%;
+  margin: 0 auto;
+  width: 50%
+}
+button{
+  margin: 0 1%
+}
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]){
+  border-color: var(--main-color);
+  box-shadow: none;
 }
